crates/swc/tests/tsc-references/interfaceExtendingClassWithProtecteds_es5.1.normal.js
import * as swcHelpers from "@swc/helpers";
var Foo = function Foo() {
    "use strict";
    swcHelpers.classCallCheck(this, Foo);
};
var i;
var r = i.y;
var r2 = i.x; // error
